versions/5.7.0/source/10mopub.rst
Integrate with MoPub
====================

If you already have MoPub ads serving in your app, but want to integrate SuperAwesome as well,
without having to directly use the AwesomeAds SDK, you can follow the steps below:

Add the MoPub plugin
--------------------

You can either change your module's **build.gradle** file (usually the file under MyApplication/app/) to
the following format:

.. code-block:: shell

    repositories {
        maven {
            url  "http://dl.bintray.com/gabrielcoman/maven"
        }
    }

    dependencies {
        # add SuperAwesome SDK
        compile 'tv.superawesome.sdk:superawesome:<sdk_version>'
        # or add the base SDK
        # compile 'tv.superawesome.sdk:superawesome-base:<sdk_version>'

        # add MoPub plugin
        compile 'tv.superawesome.sdk:samopub:<sdk_version>'
    }

The MoPub plugin will contain three main classes that conform to MoPub's guidelines regarding 3rd party ad network adapters:

* `SAMoPubBannerCustomEvent <https://github.com/SuperAwesomeLTD/sa-mobile-sdk-android/blob/master/samopub/src/main/java/com/mopub/sa/mobileads/SAMoPubBannerCustomEvent.java>`_
* `SAMoPubInterstitialCustomEvent <https://github.com/SuperAwesomeLTD/sa-mobile-sdk-android/blob/master/samopub/src/main/java/com/mopub/sa/mobileads/SAMoPubInterstitialCustomEvent.java>`_
* `SAMoPubVideoCustomEvent <https://github.com/SuperAwesomeLTD/sa-mobile-sdk-android/blob/master/samopub/src/main/java/com/mopub/sa/mobileads/SAMoPubVideoCustomEvent.java>`_

You can also download the MoPub adapter as a .jar archive, from here `SuperAwesomeSDK-<sdk_version>.Android.MoPubPlugin.jars.zip <https://github.com/SuperAwesomeLTD/sa-sdk-build-repo/blob/master/package/aa_android/<sdk_version>/SuperAwesomeSDK-<sdk_version>.Android.MoPubPlugin.jars.zip?raw=true>`_.

Setup MoPub Custom Networks
---------------------------

Login to the MoPub dashboard using your preferred account.

From here forward the tutorial assumes you have an Android app with three ad units setup in MoPub; one banner, one interstitial ad and one rewarded video ad:

.. image:: img/IMG_07_MoPub_0.png

From your MoPub admin interface you should create a **New Network**

.. image:: img/IMG_07_MoPub_1.png

From the next menu, select **Custom Native Network**

.. image:: img/IMG_07_MoPub_2.png

You'll be taken to a new page. Here select the title of the new network

.. image:: img/IMG_07_MoPub_3.png

And assign custom inventory details for Banner, Interstitial and Video ads:

.. image:: img/IMG_07_MoPub_4.png

Notice that the custom event classes required by MoPub are:

* for Banner Ads: **com.mopub.sa.mobileads.SAMoPubBannerCustomEvent**
* for Interstitial Ads: **com.mopub.sa.mobileads.SAMoPubInterstitialCustomEvent**
* for Rewarded Video Ads: **com.mopub.sa.mobileads.SAMoPubVideoCustomEvent**

the same as the names of the files you downloaded as part of the MoPub plugin.

Finally, you can tell MoPub what AwesomeAds ads to load and how to display them by filling out the
custom event class data field with a JSON similar to this:

.. code-block:: shell

    {
        "placementId": 30473,
        "isTestEnabled": true or false,
        "isParentalGateEnabled": true or false,
        "orientation": "ANY" or "PORTRAIT" or "LANDSCAPE",
        "shouldShowCloseButton": false or false,
        "shouldAutomaticallyCloseAtEnd": true or false,
        "shouldShowSmallClickButton": true or false
    }


Implement MoPub ads in your Android app
---------------------------------------

Once the previous steps are done, you can add MoPub banners, interstitials and rewarded video ads just as you normally would:

.. code-block:: java

    //
    // create banner ad
    MoPubView banner = (MoPubView) findViewById(R.id.BannerID);
    banner.setAdUnitId("_AD_UNIT_ID_");
    banner.loadAd();

    //
    // create interstitial
    MoPubInterstitial interstitial = new MoPubInterstitial(this, "_AD_UNIT_ID_");
    interstitial.load();

    //
    // create video
    MoPubRewardedVideos.initializeRewardedVideo(this);
    MoPubRewardedVideos.loadRewardedVideo("_AD_UNIT_ID_");


Since the previously created custom events will run on these ads, and AwesomeAds is integrated alongside the MoPub plugin, you
should start seeing ads playing.
